# executable-loader

./: .gitignore  CMakeLists.txt  README.md
src/exe/: main.cpp
src/lib/: CMakeLists.txt
src/lib/impl/sprintor/interop/: file_system.cpp  process.cpp  shell_executor.cpp
src/lib/impl/sprintor/interop/detail/: in_memory_executor.cpp  in_memory_executor.linux.cpp  in_memory_executor.osx.cpp  in_memory_executor.win32.cpp  in_memory_executor.win64.cpp  process.win32.cpp  shell_executor.win32.cpp
src/lib/impl/sprintor/utils/: string.cpp
src/lib/impl/sprintor/utils/detail/: string.win32.cpp
src/lib/include/private/sprintor/interop/: file_system.h
src/lib/include/private/sprintor/utils/: string.h
src/lib/include/public/sprintor/interop/: process.h
src/lib/include/public/sprintor/interop/detail/: in_memory_executor.h  shell_executor.h
